--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <!-- 画像を表示します -->
               <!-- ケーキのアニメーション -->
           <a-entity
-              gltf-model=”url(/dog_ar_hozon2_append2.glb)” 
+              gltf-model="url(/dog_ar_hozon2_append2.glb)"
               position="0 0 0"
               rotation="-45 0 0"
               scale="0.5 0.5 0.5"
