--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
           <!-- アニメーションを表示します -->
           <a-entity
-              gltf-model="url(dog_ar_3.glb.glb)"
+              gltf-model="url(dog_ar_3.glb)"
               position="0 0 0"
               rotation="-45 0 0"
               scale="0.5 0.5 0.5"
