--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a-marker
           type="pattern" 
           preset="custom" 
-          url="dog_ar_3.patt">
+          url="dog.patt">
     
           <!-- アニメーションを表示します -->
           <a-entity
