ar-marker change

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a-marker
           type="pattern" 
           preset="custom" 
-          url="dog.patt">
+          url="/home/chocolate/meisi_ar/pattern-qr-code (1).patt">
     
           <!-- アニメーションを表示します -->
           <a-entity
