--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a-marker
           type="pattern" 
           preset="custom" 
-          url="pattern-qr-code (2).patt">
+          url="pattern-ar.patt">
     
           <!-- アニメーションを表示します -->
           <a-entity
